--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a1f1e98f",
+   "id": "f56a043e",
    "metadata": {},
    "source": [
     "# [Vancouver DataJam] Ploomber Workshop Material\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09ba72bc",
+   "id": "d70f44b1",
    "metadata": {},
    "source": [
     "## Running a pipeline\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c71bf569",
+   "id": "4846fe70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cda1fea",
+   "id": "79c983fd",
    "metadata": {},
    "source": [
     "We can see the following:\n",
     "\n",
-    "* `output/` - directory to save our output\n",
+    "* `output/` - directory to save our output (won't exist until after the first run)\n",
     "* `pipeline.yaml` - pipeline declaration\n",
     "* `scripts/` - our source code\n",
     "\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5174e534",
+   "id": "958a3cd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3c6943f",
+   "id": "9cdec29b",
    "metadata": {},
    "source": [
     "There are four of them; each file corresponds to a single task in our pipeline.\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9307eef5",
+   "id": "abaf4584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fae732dc",
+   "id": "41b42fa1",
    "metadata": {},
    "source": [
     "### That's it! You just ran your first Ploomber pipeline!\n",
@@ -145,7 +145,7 @@
     "\n",
     "The pipeline above has four tasks: one that obtains raw data (the iris dataset), two that process such data, and a final task that trains a model.\n",
     "\n",
-    "#### Step 1: Copy the snippet contents above into `playground/pipeline.yaml`.\n",
+    "#### Step 1: Copy the snippet contents above into `playground/pipeline.yaml` (Create the file first, save before running the next cell).\n",
     "\n",
     "Our source code is still missing; let's ask Ploomber to generate some base files for us:"
    ]
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cce9321f",
+   "id": "fc4fff95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31b0b4be",
+   "id": "c878d107",
    "metadata": {},
    "source": [
     "Let's now ensure that our pipeline is appropriately recognized:"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7094b2e",
+   "id": "f43611ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc6a74d1",
+   "id": "6911c262",
    "metadata": {},
    "source": [
     "We can see that Ploomber recognizes our pipeline and prints its status. Let's visualize it:"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2293bc41",
+   "id": "e9453154",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cd4dda3",
+   "id": "5de6ba26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cb8c94d",
+   "id": "31eb03f5",
    "metadata": {},
    "source": [
     "\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca64c0fe",
+   "id": "726bdb37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bdfec0f",
+   "id": "f9788c4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "831c6f64",
+   "id": "4976ad2f",
    "metadata": {},
    "source": [
     "\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88e3426f",
+   "id": "0b1ddf19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b1d086",
+   "id": "261b848f",
    "metadata": {},
    "source": [
     "Navigate to `playground/output/` and you'll see all the outputs: the executed notebooks, data files and trained model."
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad2b0285",
+   "id": "f8b01edf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a898701d",
+   "id": "e4d8b124",
    "metadata": {},
    "source": [
     "\n",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cb0e80e",
+   "id": "1224e524",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a8a925",
+   "id": "01140e0c",
    "metadata": {},
    "source": [
     "You can see that only the `fit` task ran!\n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f545e7a",
+   "id": "c2af96a2",
    "metadata": {},
    "source": [
     "## Execution in the cloud\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88170eea",
+   "id": "1431ca0b",
    "metadata": {},
    "source": [
     "# Resources\n",
