updates readme and index

--- a/index.ipynb
+++ b/index.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f56a043e",
+   "id": "f74aa302",
    "metadata": {},
    "source": [
-    "# [Vancouver DataJam] Ploomber Workshop Material\n",
+    "# Global Hacks Ploomber Workshop Material\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d70f44b1",
+   "id": "7173f3ba",
    "metadata": {},
    "source": [
     "## Running a pipeline\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4846fe70",
+   "id": "490cdadd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79c983fd",
+   "id": "d66eff21",
    "metadata": {},
    "source": [
     "We can see the following:\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "958a3cd6",
+   "id": "bee59dc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cdec29b",
+   "id": "cbc90059",
    "metadata": {},
    "source": [
     "There are four of them; each file corresponds to a single task in our pipeline.\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abaf4584",
+   "id": "5d0116c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41b42fa1",
+   "id": "70f6fa55",
    "metadata": {},
    "source": [
     "### That's it! You just ran your first Ploomber pipeline!\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc4fff95",
+   "id": "eca48230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c878d107",
+   "id": "c3ceaa98",
    "metadata": {},
    "source": [
     "Let's now ensure that our pipeline is appropriately recognized:"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f43611ff",
+   "id": "70d89ffb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6911c262",
+   "id": "0e1912f2",
    "metadata": {},
    "source": [
     "We can see that Ploomber recognizes our pipeline and prints its status. Let's visualize it:"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9453154",
+   "id": "f90da018",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5de6ba26",
+   "id": "902088a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31eb03f5",
+   "id": "ee8846ab",
    "metadata": {},
    "source": [
     "\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "726bdb37",
+   "id": "f4fad373",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9788c4d",
+   "id": "cdf6cd2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4976ad2f",
+   "id": "188fbcae",
    "metadata": {},
    "source": [
     "\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b1ddf19",
+   "id": "fd0cefa0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "261b848f",
+   "id": "dafe5fd6",
    "metadata": {},
    "source": [
     "Navigate to `playground/output/` and you'll see all the outputs: the executed notebooks, data files and trained model."
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8b01edf",
+   "id": "673f0a87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4d8b124",
+   "id": "24d683d2",
    "metadata": {},
    "source": [
     "\n",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1224e524",
+   "id": "9b466abd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01140e0c",
+   "id": "72cface1",
    "metadata": {},
    "source": [
     "You can see that only the `fit` task ran!\n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2af96a2",
+   "id": "4226f191",
    "metadata": {},
    "source": [
     "## Execution in the cloud\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1431ca0b",
+   "id": "a7b9935c",
    "metadata": {},
    "source": [
     "# Resources\n",
