--- a/index.ipynb
+++ b/index.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d6517b7c",
+   "id": "4816c07d",
    "metadata": {},
    "source": [
-    "# Global Hacks Ploomber Workshop Material\n",
+    "# Vol Hacks Ploomber Workshop Material\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34e468b7",
+   "id": "cafdcfaa",
    "metadata": {},
    "source": [
     "## Running a pipeline\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33c34d6b",
+   "id": "121a191c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a70e8fa9",
+   "id": "285f6532",
    "metadata": {},
    "source": [
     "We can see the following:\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3b74ae",
+   "id": "6cc339d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9733b79",
+   "id": "12b4a967",
    "metadata": {},
    "source": [
     "There are four of them; each file corresponds to a single task in our pipeline.\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcf621ca",
+   "id": "b167fc59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa1d4ec",
+   "id": "dac678de",
    "metadata": {},
    "source": [
     "### That's it! You just ran your first Ploomber pipeline!\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ffbb3ed",
+   "id": "82ee30de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bab1eff",
+   "id": "25ccab5f",
    "metadata": {},
    "source": [
     "Let's now ensure that our pipeline is appropriately recognized:"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96ab8fa7",
+   "id": "91668253",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "668983ae",
+   "id": "f99a5ad8",
    "metadata": {},
    "source": [
     "We can see that Ploomber recognizes our pipeline and prints its status. Let's visualize it:"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79d338b5",
+   "id": "670077f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8dae460",
+   "id": "c3dc4f4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e00919f0",
+   "id": "7f4294d1",
    "metadata": {},
    "source": [
     "\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4363eae6",
+   "id": "57764075",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8e57c6b",
+   "id": "fede0a7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "986aec17",
+   "id": "e29e41ab",
    "metadata": {},
    "source": [
     "\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83e22af5",
+   "id": "b0102046",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bd6be71",
+   "id": "e60eabd7",
    "metadata": {},
    "source": [
     "Navigate to `playground/output/` and you'll see all the outputs: the executed notebooks, data files and trained model."
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84fe7c30",
+   "id": "9cb9e6a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c82b4ea",
+   "id": "cd91324f",
    "metadata": {},
    "source": [
     "\n",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1d74ed2",
+   "id": "3da05624",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5762390b",
+   "id": "4ae343b6",
    "metadata": {},
    "source": [
     "You can see that only the `fit` task ran!\n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ee742d5",
+   "id": "bb176dde",
    "metadata": {},
    "source": [
     "## Execution in the cloud\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "028ed764",
+   "id": "f634dcb9",
    "metadata": {},
    "source": [
     "# Resources\n",
