--- a/index.ipynb
+++ b/index.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4816c07d",
+   "id": "fcfd7ac8",
    "metadata": {},
    "source": [
-    "# Vol Hacks Ploomber Workshop Material\n",
+    "# Hack TX Ploomber Workshop Material\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cafdcfaa",
+   "id": "8b95af49",
    "metadata": {},
    "source": [
     "## Running a pipeline\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121a191c",
+   "id": "aeb92f61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "285f6532",
+   "id": "1d985da7",
    "metadata": {},
    "source": [
     "We can see the following:\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cc339d0",
+   "id": "fce54ea8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12b4a967",
+   "id": "35c82b90",
    "metadata": {},
    "source": [
     "There are four of them; each file corresponds to a single task in our pipeline.\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b167fc59",
+   "id": "ebd8acba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dac678de",
+   "id": "999ea416",
    "metadata": {},
    "source": [
     "### That's it! You just ran your first Ploomber pipeline!\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82ee30de",
+   "id": "f72cbd37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25ccab5f",
+   "id": "337c93e5",
    "metadata": {},
    "source": [
     "Let's now ensure that our pipeline is appropriately recognized:"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91668253",
+   "id": "1d97362d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f99a5ad8",
+   "id": "f7d31be7",
    "metadata": {},
    "source": [
     "We can see that Ploomber recognizes our pipeline and prints its status. Let's visualize it:"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "670077f1",
+   "id": "158a62df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3dc4f4f",
+   "id": "7492a94e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f4294d1",
+   "id": "c88dca57",
    "metadata": {},
    "source": [
     "\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57764075",
+   "id": "90e98670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fede0a7e",
+   "id": "da3f2019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e29e41ab",
+   "id": "d9eee52b",
    "metadata": {},
    "source": [
     "\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0102046",
+   "id": "f47e6991",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e60eabd7",
+   "id": "a8f9a66e",
    "metadata": {},
    "source": [
     "Navigate to `playground/output/` and you'll see all the outputs: the executed notebooks, data files and trained model."
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cb9e6a4",
+   "id": "f9751dea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd91324f",
+   "id": "7dc9dafc",
    "metadata": {},
    "source": [
     "\n",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3da05624",
+   "id": "51f95123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ae343b6",
+   "id": "acdf9351",
    "metadata": {},
    "source": [
     "You can see that only the `fit` task ran!\n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb176dde",
+   "id": "45642ff4",
    "metadata": {},
    "source": [
     "## Execution in the cloud\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f634dcb9",
+   "id": "148d4f32",
    "metadata": {},
    "source": [
     "# Resources\n",
