--- a/index.ipynb
+++ b/index.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fcfd7ac8",
+   "id": "104f7ec3",
    "metadata": {},
    "source": [
-    "# Hack TX Ploomber Workshop Material\n",
+    "# Ploomber Workshop Material\n",
     "\n",
     "## Introduction\n",
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b95af49",
+   "id": "2f5de4f6",
    "metadata": {},
    "source": [
     "## Running a pipeline\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb92f61",
+   "id": "1608a0b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d985da7",
+   "id": "a0849542",
    "metadata": {},
    "source": [
     "We can see the following:\n",
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fce54ea8",
+   "id": "1ce42d5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c82b90",
+   "id": "d2c63529",
    "metadata": {},
    "source": [
     "There are four of them; each file corresponds to a single task in our pipeline.\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebd8acba",
+   "id": "1fcb990c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "999ea416",
+   "id": "ae447a34",
    "metadata": {},
    "source": [
     "### That's it! You just ran your first Ploomber pipeline!\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f72cbd37",
+   "id": "2a5c0e6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "337c93e5",
+   "id": "2373f864",
    "metadata": {},
    "source": [
     "Let's now ensure that our pipeline is appropriately recognized:"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d97362d",
+   "id": "5850a538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d31be7",
+   "id": "a5323006",
    "metadata": {},
    "source": [
     "We can see that Ploomber recognizes our pipeline and prints its status. Let's visualize it:"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "158a62df",
+   "id": "a29827d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7492a94e",
+   "id": "2fb49970",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c88dca57",
+   "id": "f1b833eb",
    "metadata": {},
    "source": [
     "\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e98670",
+   "id": "1000df5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da3f2019",
+   "id": "f7cb0c3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9eee52b",
+   "id": "fc106f93",
    "metadata": {},
    "source": [
     "\n",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f47e6991",
+   "id": "cbc32a48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8f9a66e",
+   "id": "d3b720e8",
    "metadata": {},
    "source": [
     "Navigate to `playground/output/` and you'll see all the outputs: the executed notebooks, data files and trained model."
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9751dea",
+   "id": "3c83a5de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dc9dafc",
+   "id": "34573422",
    "metadata": {},
    "source": [
     "\n",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51f95123",
+   "id": "6168fed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acdf9351",
+   "id": "95b0dbdf",
    "metadata": {},
    "source": [
     "You can see that only the `fit` task ran!\n",
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45642ff4",
+   "id": "3829fd48",
    "metadata": {},
    "source": [
     "## Execution in the cloud\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "148d4f32",
+   "id": "b9e38feb",
    "metadata": {},
    "source": [
     "# Resources\n",
@@ -490,10 +490,9 @@
     "\n",
     "# Contact\n",
     "\n",
-    "* E-mail: [contact@ploomber.io](mailto:contact@ploomber.io)\n",
-    "* [Twitter](https://twitter.com/ploomber)\n",
-    "* [Google form](https://forms.gle/Xf9h1Q2TGoSk15NEA)\n",
-    "* [Join us on Slack](http://community.ploomber.io)"
+    "* Twitter: [@ploomber](https://twitter.com/ploomber)\n",
+    "* Join us on Slack: [http://community.ploomber.io](http://community.ploomber.io)\n",
+    "* E-mail: [contact@ploomber.io](mailto:contact@ploomber.io)"
    ]
   }
  ],
