adds index.es.ipynb

--- a/index.ipynb
+++ b/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7bc42c2b",
+   "id": "13d748b4",
    "metadata": {},
    "source": [
     "# Ploomber Workshop Material\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf61f1c",
+   "id": "d2d725ce",
    "metadata": {},
    "source": [
     "## 2. Refactoring a legacy notebook\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94b8344e",
+   "id": "388facc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8208833",
+   "id": "5f3e647c",
    "metadata": {},
    "source": [
     "Our sample notebook is the [`nb.ipynb`](playground/nb.ipynb) file, let's take a look at it.\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10fd3197",
+   "id": "80c42d69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7150089f",
+   "id": "a166114f",
    "metadata": {},
    "source": [
     "Let's take a look at the directory:"
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea80667",
+   "id": "6633f463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d4ac255",
+   "id": "b8a5f473",
    "metadata": {},
    "source": [
     "We can see that we have a few new files. `pipeline.yaml` contains the pipeline declaration, and `tasks/` contains the *stages* that Soorgeon identified based on our H2 Markdown headings."
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64ec5065",
+   "id": "36248e91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35e532f8",
+   "id": "3ca99bd1",
    "metadata": {},
    "source": [
     "Let's plot the pipeline (note that we're now using `ploomber`, which is the framework for developing pipelines:"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "521dd701",
+   "id": "c2d841d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3937868",
+   "id": "a2a31f07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0244c03",
+   "id": "3110adf7",
    "metadata": {},
    "source": [
     "Soorgeon correctly identified the *stages* in our original `nb.ipynb` notebook. It even detected that the last two tasks (`linear-regression`, and `random-forest-regressor` are independenf of each other!).\n",
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f71bd7dc",
+   "id": "ddb3c5a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2360db7f",
+   "id": "43b54a06",
    "metadata": {},
    "source": [
     "## 3. The `pipeline.yaml` file\n",
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9abae055",
+   "id": "05118517",
    "metadata": {},
    "source": [
     "## 4. Building the pipeline\n",
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49724dd7",
+   "id": "b0b535df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc10294f",
+   "id": "6c93feba",
    "metadata": {},
    "source": [
     "Navigate to `playground/output/` and you'll see all the outputs: the executed notebooks, data files and trained model."
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "074b8234",
+   "id": "f38d666c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21adf417",
+   "id": "eeb50947",
    "metadata": {},
    "source": [
     "## 5. Declaring dependencies\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f845e6a",
+   "id": "821241da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7803b109",
+   "id": "1bacbbfd",
    "metadata": {},
    "source": [
     "The arrows in the diagram represent input/output dependencies, hence, determine execution order. For example, the first task (`load`) loads some data, then `clean` uses such data as input and process it, then `train-test-split` splits our dataset in training and test, finally, we use those datasets to train a linear regression and a random forest regressor.\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cd7304a",
+   "id": "05dcc565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a04cbb1f",
+   "id": "a6fb55c7",
    "metadata": {},
    "source": [
     "Let's see how the plot looks now:"
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "492f6f8f",
+   "id": "48efe6dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe86658",
+   "id": "a5f4a5fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8abeb4b8",
+   "id": "f8031df5",
    "metadata": {},
    "source": [
     "You can see that Ploomber recognizes the new file, but it doesn't have any dependency, so let's tell Ploomber that it should execute after `train-test-split`:"
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5f751d4",
+   "id": "4897254d",
    "metadata": {},
    "source": [
     "####  Open `playground/tasks/gradient-boosting-regressor.py` as a notebook by right-clicking on it and then `Open With` -> `Notebook`:\n",
@@ -333,7 +333,7 @@
     "upstream = None\n",
     "```\n",
     "\n",
-    "This special variable indicates which tasks should execute before the notebook we're currently working on. In this case, we want to get the raw data so we can process it here, so we do:\n",
+    "This special variable indicates which tasks should execute before the notebook we're currently working on. In this case, we want to get training data so we can train our new model so we change the `upstream` variable:\n",
     "\n",
     "```python\n",
     "upstream = ['train-test-split']\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2bbec97",
+   "id": "5782eb3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c326a332",
+   "id": "fe55f9c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09bfba4a",
+   "id": "9df3461d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf2289f",
+   "id": "fe90662f",
    "metadata": {},
    "source": [
     "## 7. Incremental builds\n",
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08883d25",
+   "id": "3e629caa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,26 +422,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e117b8b2",
+   "id": "0a63e01e",
    "metadata": {},
    "source": [
     "You can see that only the `gradient-boosting-regressor` task ran!\n",
     "\n",
     "Incremental builds allow us to iterate faster without keeping track of task changes.\n",
     "\n",
-    "Check out [`playground/output/gradient-boosting-regressor.ipynb`](playground/output/gradient-boosting-regressor.ipynb), which contains the output notebooks with the model evaluation plot and table."
+    "Check out [`playground/output/gradient-boosting-regressor.ipynb`](playground/output/gradient-boosting-regressor.ipynb), which contains the output notebooks with the model evaluation plot."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "201d94e6",
+   "id": "7525e9f6",
    "metadata": {},
    "source": [
     "## 8. Execution in the cloud\n",
     "\n",
     "When working with datasets that fit in memory, running your pipeline is simple enough, but sometimes you may need more computing power for your analysis. Ploomber makes it simple to execute your code in a distributed environment without code changes.\n",
     "\n",
-    "Check out [Soopervisor](soopervisor.readthedocs.io), the package that implements exporting Ploomber projects in the cloud with support for:\n",
+    "Check out [Soopervisor](https://soopervisor.readthedocs.io), the package that implements exporting Ploomber projects in the cloud with support for:\n",
     "\n",
     "* [Kubernetes (Argo Workflows)](https://soopervisor.readthedocs.io/en/latest/tutorials/kubernetes.html)\n",
     "* [AWS Batch](https://soopervisor.readthedocs.io/en/latest/tutorials/aws-batch.html)\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62effdf0",
+   "id": "430f2085",
    "metadata": {},
    "source": [
     "# 9. Resources\n",
@@ -466,7 +466,7 @@
     "* [Argo Community Meeting talk](https://youtu.be/FnpXyg-5W_c)\n",
     "* [Pangeo Showcase talk (AWS Batch demo)](https://youtu.be/XCgX1AszVF4)\n",
     "\n",
-    "# 10 .Contact\n",
+    "# 10. Contact\n",
     "\n",
     "* Twitter: [@ploomber](https://twitter.com/ploomber)\n",
     "* Join us on Slack: [http://ploomber.io/community](http://ploomber.io/community)\n",
